<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JongHhong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="header">JongHhong</string>
    <string name="username">ชื่อผู้ใช้</string>
    <string name="password">รหัสผ่าน</string>


    <!--navDrawer-->
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <!--reservationRoom-->
    <string name="resvDate">วันที่ต้องการจองห้อง:</string>
    <string name="startTime">เวลาเริ่มใช้ห้อง:</string>
    <string name="endTime">เวลาสิ้นสุดใช้ห้อง:</string>
    <string name="room">ห้องประชุม:</string>

    <!--edit profile-->
    <string name="userID">รหัส:</string>
    <string name="name">ชื่อ - นามสกุล:</string>
    <string name="permission">สถานะ:</string>
    <string name="tel">เบอร์โทรศัพท์:</string>
    <string name="email">อีเมล์:</string>

    <!--button-->
    <string name="loginButton">เข้าสู่ระบบ</string>
    <string name="resvRoomButton">บันทึก</string>
    <string name="editProfileButton">บันทึก</string>

    <!--firstLogin-->
    <string name="advice">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="gmail">อีเมล์: (กรอกเฉพาะ Gmail เท่านั้น)</string>

    <!--ChangePassword-->
    <string name="oldPassword">รหัสผ่านเดิม</string>
    <string name="newPassword">รหัสผ่านใหม่</string>
    <string name="confirmPass">ยืนยันรหัสผ่านใหม่</string>
    <string name="changeButton">บันทึก</string>

</resources>
