<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userID"
            android:textSize="14sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userID_edt"
            android:text="5414110057"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ณรงค์พล สุทธิมรรคผล"
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permission"
            android:textSize="14sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="นักศึกษา"
            android:enabled="false"/>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tel_edt"
            android:hint="@string/tel"
            app:floatingLabel="normal"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_edt"
            android:hint="@string/email"
            app:floatingLabel="normal"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editProfileButton"
            android:id="@+id/btn_editProfile"
            android:background="#827717"/>


    </LinearLayout>
</RelativeLayout>