<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="100dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_oldPassword"
            android:hint="@string/oldPassword"
            android:inputType="textPassword"
            app:floatingLabel="highlight"
            app:floatingLabelTextSize="14sp"
            app:baseColor="#000000"
            app:primaryColor="#827717"
            android:maxLength="10"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_newPassword"
            android:hint="@string/newPassword"
            android:inputType="textPassword"
            app:floatingLabel="highlight"
            app:floatingLabelTextSize="14sp"
            app:baseColor="#000000"
            app:primaryColor="#827717"
            android:maxLength="10"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_confirm"
            android:hint="@string/confirmPass"
            android:inputType="textPassword"
            app:floatingLabel="highlight"
            app:floatingLabelTextSize="14sp"
            app:baseColor="#000000"
            app:primaryColor="#827717"
            android:maxLength="10"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changeButton"
            android:id="@+id/btn_changePassword"
            android:background="#827717"/>

    </LinearLayout>
</LinearLayout>