<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:alpha="0.3"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="50sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:id="@+id/tv_header"
            android:textStyle="bold|italic"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_user"
            android:maxLength="8"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:hint="@string/username"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/ic_account"
            android:background="@drawable/edt_top"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_pass"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock"
            android:background="@drawable/edt_buttom"
            android:singleLine="true"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginButton"
            android:id="@+id/btn_login"
            android:layout_gravity="center_horizontal"
            android:background="#827717"/>
        </LinearLayout>
</FrameLayout>